--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "moment": "^2.20.1",
-    "mongoose": "^5.0.0-rc1",
+    "mongoose": "^5.6.7",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
@@ -14,7 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-router-transition": "^1.1.3",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^3.0.1",
     "react-spinkit": "^3.0.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
